# cpp-playground

./: .clang-format  .clang-tidy  CMakeLists.txt
.devcontainer/: Dockerfile  check-git.sh  devcontainer.json  docker-compose.yml  entrypoint.sh
lights/: CMakeLists.txt  CoRoutineLights.cpp  CoRoutineLights.hpp  Lights.cpp  Lights.hpp  README.md  StateMachineLights.cpp  StateMachineLights.hpp  ThreadLights.cpp  ThreadLights.hpp  lights_app.cpp
refs/: CMakeLists.txt  Foo.cpp  Foo.hpp  refs.cpp  simple.cpp
src/: refs.cpp  simple.cpp
